syntax = "proto3";

import "github.com/microhq/geo-srv/proto/common.proto";

service Location {
	rpc Read(ReadRequest) returns (ReadResponse) {}
	rpc Save(SaveRequest) returns (SaveResponse) {}
	rpc Search(SearchRequest) returns (SearchResponse) {}
}

message ReadRequest {
	string id = 1;
}

message ReadResponse {
	Entity entity = 1;
}

message SaveRequest {
	Entity entity = 1;
}

message SaveResponse {
}

message SearchRequest {
	Point center = 1;
	double radius = 2; // in meters
	string type = 3;
	int64 numEntities = 4;
}

message SearchResponse {
	repeated Entity entities = 1;
}
